[project]
name = "joustmania"
version = "2.0.0"
description = "Multi-player gaming system using PS Move controllers"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Main application dependencies
    "flask>=2.0.0",
    "Flask-WTF>=1.0.0",
    "pyalsaaudio>=0.9.0",
    "pydub>=0.25.0",
    "pyyaml>=6.0",
    "dbus-python>=1.2.0",
    "python-dotenv>=0.19.0",
    "pygame>=2.0.0",
    # audioop is in stdlib for Python <3.13, audioop-lts for >=3.13
    "audioop-lts>=0.2.0; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.17.0",
]

[tool.setuptools]
packages = ["lib"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.uv.workspace]
members = [
    "proto",
    "services/controller_manager",
    "services/game_coordinator",
    "services/settings",
    "services/supervisor",
    "services/menu",
    "services/audio",
    "services/webui",
    "tests/integration",
]

# ty - Type checking configuration
[tool.ty]
# Start permissive, tighten gradually
# ty is designed for gradual adoption

[tool.ty.rules]
# Enable strict checking incrementally as needed
# Example rules (commented out for gradual adoption):
# index-out-of-bounds = "error"
# division-by-zero = "error"

# ruff - Linting and formatting configuration
[tool.ruff]
line-length = 120
target-version = "py311"

# Exclude legacy code and generated files from linting
exclude = [
    "legacy",
    "Archive",
    "proto/*_pb2.py",
    "proto/*_pb2_grpc.py",
    "scripts/testing",  # Testing scripts
    "tools",  # Utility scripts
    "tests/integration",  # Integration tests
    "services/game_coordinator/games/legacy_archived",  # Legacy archived games
]

# Enable specific rule sets
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
]

ignore = [
    # Type annotations - will add gradually via ty (already configured)
    "ANN",
]

# Per-file ignore rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__

# gRPC service methods MUST use PascalCase per protobuf convention
# context parameter required by gRPC but often unused
"services/*/server.py" = ["N802", "ARG002"]

# Integration tests need to modify sys.path before imports and mock gRPC methods (PascalCase)
"services/game_coordinator/test_*_integration.py" = ["E402", "N802", "ARG001", "ARG002"]
"services/game_coordinator/tests/*.py" = ["ARG002"]  # Test fixtures

# Legacy audio module uses PascalCase functions
"services/audio/piaudio.py" = ["N802", "N806", "SIM115", "E722", "ARG002"]
"services/audio/playwav.py" = ["N802"]

# Legacy process module
"services/controller_manager/process.py" = ["I001"]  # Complex conditional imports

[tool.ruff.lint.isort]
# Define first-party packages for proper import sorting
known-first-party = ["core", "lib", "proto", "services", "common", "games", "piaudio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
