[project]
name = "joustmania"
version = "2.0.0"
description = "Multi-player gaming system using PS Move controllers"
requires-python = ">=3.9,<3.13"
# No dependencies - this is a workspace root, each member has its own deps
dependencies = []

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.workspace]
members = [
    "lib",
    "proto",
    "services/controller_manager",
    "services/game_coordinator",
    "services/settings",
    "services/menu",
    "services/audio",
    "tests/integration",
]

# ty - Type checking configuration
[tool.ty]
# Start permissive, tighten gradually
# ty is designed for gradual adoption

[tool.ty.rules]
# Enable strict checking incrementally as needed
# Example rules (commented out for gradual adoption):
# index-out-of-bounds = "error"
# division-by-zero = "error"

# ruff - Only exclusions here; rules are in each workspace member's pyproject.toml
[tool.ruff]
exclude = [
    "tools",             # Utility scripts (not part of main codebase)
    "tests/integration", # Integration tests (separate package)
]
