[project]
name = "joustmania-lib"
version = "1.0.0"
description = "Shared utilities for JoustMania microservices"
requires-python = ">=3.11"
dependencies = [
    # OpenTelemetry for tracing and metrics
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Prometheus metrics
    "prometheus-client>=0.19.0",

    # gRPC utilities
    "grpcio>=1.70.0",

    # System metrics
    "psutil>=5.9.0",

    # Feature Flags
    "openfeature-sdk>=0.6.0",
    "openfeature-provider-flagd>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"lib" = "."}
packages = ["lib"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ASYNC", "B", "C4", "RET", "SIM", "ARG"]
ignore = ["ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
