[project]
name = "joustmania-proto"
version = "1.0.0"
description = "Shared protocol buffer contracts for JoustMania microservices"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proto"]
