[project]
name = "joustmania-proto"
version = "1.0.0"
description = "Shared protocol buffer contracts for JoustMania microservices"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.29.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"proto" = "."}
packages = ["proto"]

# ruff - Exclude generated protobuf files
[tool.ruff]
line-length = 120
exclude = ["*_pb2.py", "*_pb2_grpc.py"]
