[project]
name = "joustmania-audio"
version = "1.0.0"
description = "Audio microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Protocol buffer contracts
    "joustmania-proto",
    # Audio libraries - miniaudio for distroless compatibility (Phase 80)
    "miniaudio>=1.61",

    # Audio processing for tempo control (Phase 70, resampy for distroless)
    "resampy>=0.4.0",
    "numba>=0.59.0",  # Required for Python 3.11+ compatibility
    "numpy>=1.24.0",
    "pydub>=0.25.0",
    "pyalsaaudio>=0.11.0; sys_platform == 'linux'",

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Metrics (Phase 38)
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Service package - no installable modules, just dependency management
packages = []
py-modules = []
