[project]
name = "joustmania-audio"
version = "1.0.0"
description = "Audio microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Protocol buffer contracts
    "joustmania-proto",
    # Audio libraries - miniaudio for distroless compatibility (Phase 80)
    "miniaudio>=1.61",

    # Audio processing for tempo control (Phase 70, resampy for distroless)
    "resampy>=0.4.0",
    "numba>=0.59.0",  # Required for Python 3.11+ compatibility
    "numpy>=1.24.0",
    "pydub>=0.25.0",
    "pyalsaaudio>=0.11.0; sys_platform == 'linux'",

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Metrics (Phase 38)
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Service package - no installable modules, just dependency management
packages = []
py-modules = []

# ruff - Linting configuration for this service
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ASYNC", "B", "C4", "RET", "SIM", "ARG"]
ignore = ["ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"server.py" = ["N802", "ARG002"]  # gRPC methods use PascalCase, context often unused
"tests/*.py" = ["ARG002"]  # Test fixtures
"piaudio.py" = ["W605", "ARG002", "N802", "N806", "E722", "SIM115"]  # Legacy code

[tool.ruff.lint.isort]
known-first-party = ["lib", "proto", "services"]
