[project]
name = "joustmania-controller-manager"
version = "1.0.0"
description = "Controller Manager microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Core dependencies
    "pyyaml>=6.0",
    "dbus-python>=1.2.0",

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",

    # Redis for pub/sub events
    "redis>=5.0.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
