[project]
name = "joustmania-controller-manager"
version = "1.0.0"
description = "Controller Manager microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Protocol buffer contracts
    "joustmania-proto",

    # Core dependencies
    "pyyaml>=6.0",

    # Platform-specific dependencies
    # Linux: dbus-python for BlueZ Bluetooth stack
    "dbus-python>=1.2.0; sys_platform == 'linux'",
    # NOTE: psmove/psmoveapi must be built from source (not on PyPI)
    # See: https://github.com/thp/psmoveapi for build instructions

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",

    # Redis for pub/sub events
    "redis>=5.0.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Metrics (Phase 38)
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Service package - no installable modules, just dependency management
packages = []
py-modules = []
