[project]
name = "joustmania-controller-manager"
version = "1.0.0"
description = "Controller Manager microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Workspace packages
    "joustmania-proto",
    "joustmania-lib",

    # Core dependencies
    "pyyaml>=6.0",

    # Platform-specific dependencies
    # Linux: dbus-python for BlueZ Bluetooth stack
    "dbus-python>=1.2.0; sys_platform == 'linux'",
    # NOTE: psmove/psmoveapi must be built from source (not on PyPI)
    # See: https://github.com/thp/psmoveapi for build instructions

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",

    # Redis for pub/sub events
    "redis>=5.0.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Metrics (Phase 38)
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",

    # Performance: uvloop for faster event loop (Linux only)
    "uvloop>=0.19.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }
joustmania-lib = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Service package - no installable modules, just dependency management
packages = []
py-modules = []

# ruff - Linting configuration for this service
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ASYNC", "B", "C4", "RET", "SIM", "ARG"]
ignore = ["ANN"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"servicer.py" = ["N802"]  # gRPC methods use PascalCase (protocol requirement)
"mock_control_service.py" = ["N802"]  # Mock gRPC service uses PascalCase
"backend.py" = ["B027"]  # Intentional no-op methods for optional subclass override
"server.py" = ["E402"]  # sys.path manipulation before imports
"tests/*.py" = ["ARG002", "E402"]  # Test fixtures, sys.path manipulation
"tests/conftest.py" = ["N802", "E402", "ARG002"]  # Mock gRPC classes use PascalCase

[tool.ruff.lint.isort]
known-first-party = ["lib", "proto", "services"]
