[project]
name = "joustmania-menu"
version = "1.0.0"
description = "Menu microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Protocol buffer contracts
    "joustmania-proto",
    # Core dependencies
    "pyyaml>=6.0",
    "pygame>=2.0.0",
    "pyalsaaudio>=0.9.0",
    "pydub>=0.25.0",
    # audioop is in stdlib for Python <3.13, audioop-lts for >=3.13
    "audioop-lts>=0.2.0; python_version >= '3.13'",

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",
    "grpcio-tools>=1.70.0",

    # Redis for pub/sub events
    "redis>=5.0.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Metrics (Phase 38)
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
