[project]
name = "joustmania-supervisor"
version = "1.0.0"
description = "Process Supervisor for JoustMania microservices"
requires-python = ">=3.9,<3.13"
dependencies = [
    # gRPC
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
