[project]
name = "joustmania-supervisor"
version = "1.0.0"
description = "Process Supervisor for JoustMania microservices"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Protocol buffer contracts
    "joustmania-proto",

    # gRPC
    "grpcio>=1.70.0",
    "grpcio-health-checking>=1.70.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-grpc>=0.49b0",

    # Metrics
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Service package - no installable modules, just dependency management
packages = []
py-modules = []
