[project]
name = "joustmania-webui"
version = "1.0.0"
description = "Web UI microservice for JoustMania"
requires-python = ">=3.9,<3.13"
dependencies = [
    # Web framework
    "flask>=3.0.0",
    "wtforms>=3.1.0",

    # Core dependencies
    "pyyaml>=6.0",

    # gRPC (client only)
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",

    # OpenTelemetry
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-flask>=0.49b0",
    "opentelemetry-instrumentation-grpc>=0.49b0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
