[project]
name = "joustmania-integration-tests"
version = "1.0.0"
description = "Integration tests for JoustMania using testcontainers and mock environment"
requires-python = ">=3.11"
dependencies = [
    # Protocol buffer contracts
    "joustmania-proto",

    # Testing framework
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",

    # Testcontainers for spinning up docker-compose
    "testcontainers>=4.0.0",

    # gRPC client libraries for testing
    "grpcio>=1.50.0",
]

[tool.uv.sources]
joustmania-proto = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't include test files as packages - this is just a test runner
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Filter testcontainers internal deprecation warning
# Bug in testcontainers 4.14.0: they use @wait_container_is_ready() internally
# at import time in waiting_utils.py:219, triggering their own deprecation warning.
# See: https://pypi.org/project/testcontainers/
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*:",
]
